--- a/HelloWorld/Resources/Resource.resx
+++ b/HelloWorld/Resources/Resource.resx
@@ -201,4 +201,28 @@
   <data name="UserBooks" xml:space="preserve">
     <value>Ваши книги</value>
   </data>
+  <data name="AddChapter" xml:space="preserve">
+    <value>Добавить новую главу</value>
+  </data>
+  <data name="BackToList" xml:space="preserve">
+    <value>Вернуться</value>
+  </data>
+  <data name="BookName" xml:space="preserve">
+    <value>Название книги:</value>
+  </data>
+  <data name="Chapters" xml:space="preserve">
+    <value>Главы</value>
+  </data>
+  <data name="CreateBook" xml:space="preserve">
+    <value>Создать новую книгу</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>Удалить</value>
+  </data>
+  <data name="Edit" xml:space="preserve">
+    <value>Редактировать</value>
+  </data>
+  <data name="Sureornot" xml:space="preserve">
+    <value>Вы уверены что хотите удалить эту книгу?</value>
+  </data>
 </root>
